--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #e99401;
+  --bs-primary: #e996c757d401;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -159,7 +159,7 @@ body {
   font-family: "Outfit", sans-serif;
   font-weight: 900;
   line-height: 1.2;
-  color: #e99401;
+  color: #6c757d;
 }
 
 h1, .h1 {
@@ -691,7 +691,7 @@ button:not(:disabled),
 /* rtl:end:remove */
 .text-primary {
   --bs-text-opacity: 1;
-  color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
+  color: rgba(185 102 85) !important;
 }
 
 .text-black {
